--- a/trunk/Informe/informe.tex
+++ b/trunk/Informe/informe.tex
@@ -219,6 +219,443 @@ En base a la topolog\'ia propuesta y utilizando la RFC950, se asignaron las sigu
 
 \section{Tablas de ruteo}
 
+A continuac\'on se incluyen las tablas de ruteo para todos los routers.
+
+\subsection{H101}
+\begin{table}
+  \begin{center}
+    \begin{tabular}{|l|l|l|l|}
+      \hline
+        \bf{Direcci\'on} & \bf{M\'ascara} & \bf{Gateway} & \bf{M\'etrica} \\
+      \hline 
+	10.27.15.200  & 255.255.255.252 & 10.39.25.68 & 1 \\
+        10.27.15.204  & 255.255.255.252 & 10.39.25.68 & 3 \\
+        172.51.5.192  & 255.255.255.252 & 172.51.5.193 & 0 \\
+        172.51.5.196  & 255.255.255.252 & 10.39.25.68 & 4 \\
+        172.51.5.200  & 255.255.255.252 & 10.39.25.68 & 5 \\
+        172.51.5.204  & 255.255.255.252 & 10.39.25.68 & 3 \\
+        135.143.5.0   & 255.255.255.252 & 10.39.25.68 & 3 \\
+        135.143.5.4   & 255.255.255.252 & 10.39.25.68 & 5 \\ 	
+	10.27.15.192  & 255.255.255.248 & 10.39.25.68 & 4 \\
+	10.69.6.128   & 255.255.255.224 & 10.39.25.67 & 1 \\
+        10.69.6.160   & 255.255.255.224 & 10.39.25.68 & 1 \\
+	10.39.25.64   & 255.255.255.224 & 10.39.25.65 & 0 \\       
+	10.69.6.224   & 255.255.255.224 & 10.39.25.68 & 3 \\
+	10.69.6.192   & 255.255.255.224 & 10.39.25.68 & 4 \\	
+	10.39.25.0    & 255.255.255.192 & 10.39.25.68 & 3 \\
+	10.39.25.128  & 255.255.255.128 & 10.39.25.68 & 2 \\
+	10.42.5.0     & 255.255.255.0 & 10.39.25.68 & 4 \\
+        10.69.5.0     & 255.255.255.0 & 10.39.25.66 & 1 \\
+        192.168.15.0  & 255.255.255.0 & 10.39.25.68 & 4 \\  
+    \hline
+    \end{tabular} \\
+  \end{center}
+  \caption{Tabla de ruteo H101.}
+\end{table}
+\FloatBarrier
+
+\subsection{H102}
+\begin{table}
+  \begin{center}
+    \begin{tabular}{|l|l|l|l|}
+      \hline
+        \bf{Direcci\'on} & \bf{M\'ascara} & \bf{Gateway} & \bf{M\'etrica} \\
+      \hline 
+	10.27.15.200  & 255.255.255.252 & 10.39.25.68 & 1 \\
+        10.27.15.204  & 255.255.255.252 & 10.39.25.68 & 3 \\
+        172.51.5.192  & 255.255.255.252 & 10.39.25.65 & 1 \\
+        172.51.5.196  & 255.255.255.252 & 10.39.25.68 & 4 \\
+        172.51.5.200  & 255.255.255.252 & 10.39.25.68 & 5 \\
+        172.51.5.204  & 255.255.255.252 & 10.39.25.68 & 3 \\
+        135.143.5.0   & 255.255.255.252 & 10.39.25.68 & 3 \\
+        135.143.5.4   & 255.255.255.252 & 10.39.25.68 & 5 \\ 	
+	10.27.15.192  & 255.255.255.248 & 10.39.25.68 & 4 \\
+	10.69.6.128   & 255.255.255.224 & 10.39.25.67 & 1 \\
+        10.69.6.160   & 255.255.255.224 & 10.69.6.163 & 0 \\
+	10.39.25.64   & 255.255.255.224 & 10.39.25.69 & 0 \\       
+	10.69.6.224   & 255.255.255.224 & 10.39.25.68 & 3 \\
+	10.69.6.192   & 255.255.255.224 & 10.39.25.68 & 4 \\	
+	10.39.25.0    & 255.255.255.192 & 10.39.25.68 & 3 \\
+	10.39.25.128  & 255.255.255.128 & 10.39.25.68 & 2 \\
+	10.42.5.0     & 255.255.255.0 & 10.39.25.68 & 4 \\
+        10.69.5.0     & 255.255.255.0 & 10.39.25.66 & 1 \\
+        192.168.15.0  & 255.255.255.0 & 10.39.25.68 & 4 \\  
+    \hline
+    \end{tabular} \\
+  \end{center}
+  \caption{Tabla de ruteo H102.}
+\end{table}
+\FloatBarrier
+
+\subsection{H103}
+\begin{table}
+  \begin{center}
+    \begin{tabular}{|l|l|l|l|}
+      \hline
+        \bf{Direcci\'on} & \bf{M\'ascara} & \bf{Gateway} & \bf{M\'etrica} \\
+      \hline 
+	10.27.15.200  & 255.255.255.252 & 10.39.25.68 & 1 \\
+        10.27.15.204  & 255.255.255.252 & 10.39.25.68 & 3 \\
+        172.51.5.192  & 255.255.255.252 & 10.39.25.65 & 1 \\
+        172.51.5.196  & 255.255.255.252 & 10.39.25.68 & 4 \\
+        172.51.5.200  & 255.255.255.252 & 10.39.25.68 & 5 \\
+        172.51.5.204  & 255.255.255.252 & 10.39.25.68 & 3 \\
+        135.143.5.0   & 255.255.255.252 & 10.39.25.68 & 5 \\
+        135.143.5.4   & 255.255.255.252 & 10.39.25.68 & 3 \\ 	
+	10.27.15.192  & 255.255.255.248 & 10.39.25.68 & 4 \\
+	10.69.6.128   & 255.255.255.224 & 10.39.25.67 & 1 \\
+        10.69.6.160   & 255.255.255.224 & 10.69.6.161 & 0 \\
+	10.39.25.64   & 255.255.255.224 & 10.39.25.66 & 0 \\       
+	10.69.6.224   & 255.255.255.224 & 10.39.25.68 & 3 \\
+	10.69.6.192   & 255.255.255.224 & 10.39.25.68 & 4 \\	
+	10.39.25.0    & 255.255.255.192 & 10.39.25.68 & 3 \\
+	10.39.25.128  & 255.255.255.128 & 10.39.25.68 & 2 \\
+	10.42.5.0     & 255.255.255.0 & 10.39.25.68 & 4 \\
+        10.69.5.0     & 255.255.255.0 & 10.69.5.1 & 0 \\
+        192.168.15.0  & 255.255.255.0 & 10.39.25.68 & 4 \\  
+    \hline
+    \end{tabular} \\
+  \end{center}
+  \caption{Tabla de ruteo H103.}
+\end{table}
+\FloatBarrier
+
+\subsection{H107}
+\begin{table}
+  \begin{center}
+    \begin{tabular}{|l|l|l|l|}
+      \hline
+        \bf{Direcci\'on} & \bf{M\'ascara} & \bf{Gateway} & \bf{M\'etrica} \\
+      \hline 
+	10.27.15.200  & 255.255.255.252 & 10.39.25.68 & 1 \\
+        10.27.15.204  & 255.255.255.252 & 10.39.25.68 & 3 \\
+        172.51.5.192  & 255.255.255.252 & 10.39.25.65 & 1 \\
+        172.51.5.196  & 255.255.255.252 & 10.39.25.68 & 4 \\
+        172.51.5.200  & 255.255.255.252 & 10.39.25.68 & 5 \\
+        172.51.5.204  & 255.255.255.252 & 10.39.25.68 & 3 \\
+        135.143.5.0   & 255.255.255.252 & 10.39.25.68 & 3 \\
+        135.143.5.4   & 255.255.255.252 & 10.39.25.68 & 5 \\ 	
+	10.27.15.192  & 255.255.255.248 & 10.39.25.68 & 4 \\
+	10.69.6.128   & 255.255.255.224 & 10.69.6.129 & 0 \\
+        10.69.6.160   & 255.255.255.224 & 10.69.6.162 & 0 \\
+	10.39.25.64   & 255.255.255.224 & 10.39.25.67 & 0 \\       
+	10.69.6.224   & 255.255.255.224 & 10.39.25.68 & 3 \\
+	10.69.6.192   & 255.255.255.224 & 10.39.25.68 & 4 \\	
+	10.39.25.0    & 255.255.255.192 & 10.39.25.68 & 3 \\
+	10.39.25.128  & 255.255.255.128 & 10.39.25.68 & 2 \\
+	10.42.5.0     & 255.255.255.0 & 10.39.25.68 & 4 \\
+        10.69.5.0     & 255.255.255.0 & 10.39.25.66 & 1 \\
+        192.168.15.0  & 255.255.255.0 & 10.39.25.68 & 4 \\  
+    \hline
+    \end{tabular} \\
+  \end{center}
+  \caption{Tabla de ruteo H107.}
+\end{table}
+\FloatBarrier
+
+
+\subsection{H108}
+\begin{table}
+  \begin{center}
+    \begin{tabular}{|l|l|l|l|}
+      \hline
+        \bf{Direcci\'on} & \bf{M\'ascara} & \bf{Gateway} & \bf{M\'etrica} \\
+      \hline 
+	10.27.15.200  & 255.255.255.252 & 10.27.15.201 & 0 \\
+        10.27.15.204  & 255.255.255.252 & 10.27.15.202 & 2 \\
+        172.51.5.192  & 255.255.255.252 & 10.39.25.65 & 1 \\
+        172.51.5.196  & 255.255.255.252 & 10.27.15.202 & 3 \\
+        172.51.5.200  & 255.255.255.252 & 10.27.15.202 & 4 \\
+        172.51.5.204  & 255.255.255.252 & 10.27.15.202 & 2 \\
+        135.143.5.0   & 255.255.255.252 & 10.27.15.202 & 2 \\
+        135.143.5.4   & 255.255.255.252 & 10.27.15.202 & 4 \\ 	
+	10.27.15.192  & 255.255.255.248 & 10.27.15.202 & 3 \\
+	10.69.6.128   & 255.255.255.224 & 10.39.25.67 & 1 \\
+        10.69.6.160   & 255.255.255.224 & 10.39.25.66 & 1 \\
+	10.39.25.64   & 255.255.255.224 & 10.39.25.68 & 0 \\       
+	10.69.6.224   & 255.255.255.224 & 10.27.15.202 & 2 \\
+	10.69.6.192   & 255.255.255.224 & 10.27.15.202 & 3 \\	
+	10.39.25.0    & 255.255.255.192 & 10.27.15.202 & 2 \\
+	10.39.25.128  & 255.255.255.128 & 10.27.15.202 & 1 \\
+	10.42.5.0     & 255.255.255.0 & 10.27.15.202 & 3 \\
+        10.69.5.0     & 255.255.255.0 & 10.39.25.66 & 1 \\
+        192.168.15.0  & 255.255.255.0 & 10.27.15.202 & 3 \\  
+    \hline
+    \end{tabular} \\
+  \end{center}
+  \caption{Tabla de ruteo H108.}
+\end{table}
+\FloatBarrier
+
+\subsection{H114}
+\begin{table}
+  \begin{center}
+    \begin{tabular}{|l|l|l|l|}
+      \hline
+        \bf{Direcci\'on} & \bf{M\'ascara} & \bf{Gateway} & \bf{M\'etrica} \\
+      \hline 
+	10.27.15.200  & 255.255.255.252 & 10.39.25.131 & 1 \\
+        10.27.15.204  & 255.255.255.252 & 10.27.15.205 & 0 \\
+        172.51.5.192  & 255.255.255.252 & 10.39.25.131 & 3 \\
+        172.51.5.196  & 255.255.255.252 & 10.39.25.132 & 2 \\
+        172.51.5.200  & 255.255.255.252 & 10.27.15.206 & 2 \\
+        172.51.5.204  & 255.255.255.252 & 10.39.25.130 & 1 \\
+        135.143.5.0   & 255.255.255.252 & 135.143.5.1 & 0 \\
+        135.143.5.4   & 255.255.255.252 & 10.27.15.206 & 2 \\ 	
+	10.27.15.192  & 255.255.255.248 & 10.27.15.206 & 1 \\
+	10.69.6.128   & 255.255.255.224 & 10.39.25.131 & 3 \\
+        10.69.6.160   & 255.255.255.224 & 10.39.25.131 & 3 \\
+	10.39.25.64   & 255.255.255.224 & 10.39.25.131 & 2 \\       
+	10.69.6.224   & 255.255.255.224 & 10.39.25.132 & 1 \\
+	10.69.6.192   & 255.255.255.224 & 10.27.15.206 & 1 \\	
+	10.39.25.0    & 255.255.255.192 & 10.39.25.1 & 0 \\
+	10.39.25.128  & 255.255.255.128 & 10.39.25.129 & 0 \\
+	10.42.5.0     & 255.255.255.0 & 10.27.15.206 & 1 \\
+        10.69.5.0     & 255.255.255.0 & 10.39.25.131 & 3 \\
+        192.168.15.0  & 255.255.255.0 & 10.27.15.206 & 1 \\  
+    \hline
+    \end{tabular} \\
+  \end{center}
+  \caption{Tabla de ruteo H114.}
+\end{table}
+\FloatBarrier
+
+\subsection{H115}
+\begin{table}
+  \begin{center}
+    \begin{tabular}{|l|l|l|l|}
+      \hline
+        \bf{Direcci\'on} & \bf{M\'ascara} & \bf{Gateway} & \bf{M\'etrica} \\
+      \hline 
+	10.27.15.200  & 255.255.255.252 & 10.39.25.131 & 1 \\
+        10.27.15.204  & 255.255.255.252 & 10.39.25.129 & 1 \\
+        172.51.5.192  & 255.255.255.252 & 10.39.25.131 & 3 \\
+        172.51.5.196  & 255.255.255.252 & 10.39.25.132 & 2 \\
+        172.51.5.200  & 255.255.255.252 & 10.39.25.129 & 3 \\
+        172.51.5.204  & 255.255.255.252 & 172.51.5.205 & 0 \\
+        135.143.5.0   & 255.255.255.252 & 10.39.25.129 & 1 \\
+        135.143.5.4   & 255.255.255.252 & 10.39.25.129 & 3 \\ 	
+	10.27.15.192  & 255.255.255.248 & 10.39.25.129 & 2 \\
+	10.69.6.128   & 255.255.255.224 & 10.39.25.131 & 3 \\
+        10.69.6.160   & 255.255.255.224 & 10.39.25.131 & 3 \\
+	10.39.25.64   & 255.255.255.224 & 10.39.25.131 & 2 \\       
+	10.69.6.224   & 255.255.255.224 & 10.39.25.132 & 1 \\
+	10.69.6.192   & 255.255.255.224 & 10.39.25.129 & 1 \\	
+	10.39.25.0    & 255.255.255.192 & 10.39.25.129 & 1 \\
+	10.39.25.128  & 255.255.255.128 & 10.39.25.130 & 0 \\
+	10.42.5.0     & 255.255.255.0 & 10.39.25.129 & 2 \\
+        10.69.5.0     & 255.255.255.0 & 10.39.25.131 & 3 \\
+        192.168.15.0  & 255.255.255.0 & 10.39.25.129 & 2 \\  
+    \hline
+    \end{tabular} \\
+  \end{center}
+  \caption{Tabla de ruteo H115.}
+\end{table}
+\FloatBarrier
+
+\subsection{H116}
+\begin{table}
+  \begin{center}
+    \begin{tabular}{|l|l|l|l|}
+      \hline
+        \bf{Direcci\'on} & \bf{M\'ascara} & \bf{Gateway} & \bf{M\'etrica} \\
+      \hline 
+	10.27.15.200  & 255.255.255.252 & 10.27.15.202 & 0 \\
+        10.27.15.204  & 255.255.255.252 & 10.39.25.129 & 1 \\
+        172.51.5.192  & 255.255.255.252 & 10.27.15.201 & 2 \\
+        172.51.5.196  & 255.255.255.252 & 10.39.25.132 & 2 \\
+        172.51.5.200  & 255.255.255.252 & 10.39.25.129 & 3 \\
+        172.51.5.204  & 255.255.255.252 & 10.39.25.130 & 1 \\
+        135.143.5.0   & 255.255.255.252 & 10.39.25.129 & 3 \\
+        135.143.5.4   & 255.255.255.252 & 10.39.25.129 & 3 \\ 	
+	10.27.15.192  & 255.255.255.248 & 10.39.25.129 & 2 \\
+	10.69.6.128   & 255.255.255.224 & 10.27.15.201 & 2 \\
+        10.69.6.160   & 255.255.255.224 & 10.27.15.201 & 2 \\
+	10.39.25.64   & 255.255.255.224 & 10.27.15.201 & 2 \\       
+	10.69.6.224   & 255.255.255.224 & 10.39.25.132 & 1 \\
+	10.69.6.192   & 255.255.255.224 & 10.39.25.129 & 2 \\	
+	10.39.25.0    & 255.255.255.192 & 10.39.25.129 & 1 \\
+	10.39.25.128  & 255.255.255.128 & 10.39.25.131 & 0 \\
+	10.42.5.0     & 255.255.255.0 & 10.39.25.129 & 2 \\
+        10.69.5.0     & 255.255.255.0 & 10.27.15.201 & 2 \\
+        192.168.15.0  & 255.255.255.0 & 10.39.25.129 & 2 \\  
+    \hline
+    \end{tabular} \\
+  \end{center}
+  \caption{Tabla de ruteo H116.}
+\end{table}
+\FloatBarrier
+
+
+
+\subsection{H118}
+\begin{table}
+  \begin{center}
+    \begin{tabular}{|l|l|l|l|}
+      \hline
+        \bf{Direcci\'on} & \bf{M\'ascara} & \bf{Gateway} & \bf{M\'etrica} \\
+      \hline 
+	10.27.15.200  & 255.255.255.252 & 10.69.6.226 & 2 \\
+        10.27.15.204  & 255.255.255.252 & 10.69.6.226 & 2 \\
+        172.51.5.192  & 255.255.255.252 & 10.69.6.226 & 4 \\
+        172.51.5.196  & 255.255.255.252 & 172.51.5.197 & 0 \\
+        172.51.5.200  & 255.255.255.252 & 10.69.6.226 & 4 \\
+        172.51.5.204  & 255.255.255.252 & 10.69.6.226 & 2 \\
+        135.143.5.0   & 255.255.255.252 & 10.69.6.226 & 2 \\
+        135.143.5.4   & 255.255.255.252 & 10.69.6.226 & 4 \\ 	
+	10.27.15.192  & 255.255.255.248 & 10.69.6.226 & 3 \\
+	10.69.6.128   & 255.255.255.224 & 10.69.6.226 & 4 \\
+        10.69.6.160   & 255.255.255.224 & 10.69.6.226 & 4 \\
+	10.39.25.64   & 255.255.255.224 & 10.69.6.226 & 3 \\       
+	10.69.6.224   & 255.255.255.224 & 10.69.6.225 & 0 \\
+	10.69.6.192   & 255.255.255.224 & 10.69.6.226 & 3 \\	
+	10.39.25.0    & 255.255.255.192 & 10.69.6.226 & 2 \\
+	10.39.25.128  & 255.255.255.128 & 10.69.6.226 & 1 \\
+	10.42.5.0     & 255.255.255.0 & 10.69.6.226 & 3 \\
+        10.69.5.0     & 255.255.255.0 & 10.69.6.226 & 4 \\
+        192.168.15.0  & 255.255.255.0 & 10.69.6.226 & 3 \\  
+    \hline
+    \end{tabular} \\
+  \end{center}
+  \caption{Tabla de ruteo H118.}
+\end{table}
+\FloatBarrier
+
+\subsection{H119}
+\begin{table}
+  \begin{center}
+    \begin{tabular}{|l|l|l|l|}
+      \hline
+        \bf{Direcci\'on} & \bf{M\'ascara} & \bf{Gateway} & \bf{M\'etrica} \\
+      \hline 
+	10.27.15.200  & 255.255.255.252 & 10.39.25.131 & 1 \\
+        10.27.15.204  & 255.255.255.252 & 10.39.25.129 & 1 \\
+        172.51.5.192  & 255.255.255.252 & 10.39.25.131 & 3 \\
+        172.51.5.196  & 255.255.255.252 & 10.69.6.225 & 1 \\
+        172.51.5.200  & 255.255.255.252 & 10.39.25.129 & 3 \\
+        172.51.5.204  & 255.255.255.252 & 10.39.25.130 & 1 \\
+        135.143.5.0   & 255.255.255.252 & 10.39.25.129 & 1 \\
+        135.143.5.4   & 255.255.255.252 & 10.39.25.129 & 3 \\ 	
+	10.27.15.192  & 255.255.255.248 & 10.39.25.129 & 2 \\
+	10.69.6.128   & 255.255.255.224 & 10.39.25.131 & 3 \\
+        10.69.6.160   & 255.255.255.224 & 10.39.25.131 & 3 \\
+	10.39.25.64   & 255.255.255.224 & 10.39.25.131 & 2 \\       
+	10.69.6.224   & 255.255.255.224 & 10.69.6.226 & 0 \\
+	10.69.6.192   & 255.255.255.224 & 10.39.25.129 & 2 \\	
+	10.39.25.0    & 255.255.255.192 & 10.39.25.129 & 1 \\
+	10.39.25.128  & 255.255.255.128 & 10.39.25.132 & 0 \\
+	10.42.5.0     & 255.255.255.0 & 10.39.25.129 & 2 \\
+        10.69.5.0     & 255.255.255.0 & 10.39.25.131 & 3 \\
+        192.168.15.0  & 255.255.255.0 & 10.39.25.129 & 2 \\  
+    \hline
+    \end{tabular} \\
+  \end{center}
+  \caption{Tabla de ruteo H119.}
+\end{table}
+\FloatBarrier
+
+\subsection{H130}
+\begin{table}
+  \begin{center}
+    \begin{tabular}{|l|l|l|l|}
+      \hline
+        \bf{Direcci\'on} & \bf{M\'ascara} & \bf{Gateway} & \bf{M\'etrica} \\
+      \hline 
+	10.27.15.200  & 255.255.255.252 & 10.42.5.2 & 3 \\
+        10.27.15.204  & 255.255.255.252 & 10.42.5.2 & 1 \\
+        172.51.5.192  & 255.255.255.252 & 10.42.5.2 & 5 \\
+        172.51.5.196  & 255.255.255.252 & 10.42.5.2 & 4 \\
+        172.51.5.200  & 255.255.255.252 & 10.42.5.2 & 2 \\
+        172.51.5.204  & 255.255.255.252 & 10.42.5.2 & 3 \\
+        135.143.5.0   & 255.255.255.252 & 10.42.5.2 & 2 \\
+        135.143.5.4   & 255.255.255.252 & 135.143.5.5 & 0 \\ 	
+	10.27.15.192  & 255.255.255.248 & 10.42.5.2 & 1 \\
+	10.69.6.128   & 255.255.255.224 & 10.42.5.2 & 5 \\
+        10.69.6.160   & 255.255.255.224 & 10.42.5.2 & 5 \\
+	10.39.25.64   & 255.255.255.224 & 10.42.5.2 & 4 \\       
+	10.69.6.224   & 255.255.255.224 & 10.42.5.2 & 3 \\
+	10.69.6.192   & 255.255.255.224 & 10.42.5.2 & 1 \\	
+	10.39.25.0    & 255.255.255.192 & 10.42.5.2 & 2 \\
+	10.39.25.128  & 255.255.255.128 & 10.42.5.2 & 2 \\
+	10.42.5.0     & 255.255.255.0 & 10.42.5.1 & 0 \\
+        10.69.5.0     & 255.255.255.0 & 10.42.5.2 & 5 \\
+        192.168.15.0  & 255.255.255.0 & 10.42.5.2 & 1 \\  
+    \hline
+    \end{tabular} \\
+  \end{center}
+  \caption{Tabla de ruteo H130.}
+\end{table}
+\FloatBarrier
+
+\subsection{H131}
+\begin{table}
+  \begin{center}
+    \begin{tabular}{|l|l|l|l|}
+      \hline
+        \bf{Direcci\'on} & \bf{M\'ascara} & \bf{Gateway} & \bf{M\'etrica} \\
+      \hline 
+	10.27.15.200  & 255.255.255.252 & 192.168.15.2 & 3 \\
+        10.27.15.204  & 255.255.255.252 & 192.168.15.2 & 1 \\
+        172.51.5.192  & 255.255.255.252 & 192.168.15.2 & 5 \\
+        172.51.5.196  & 255.255.255.252 & 192.168.15.2 & 4 \\
+        172.51.5.200  & 255.255.255.252 & 172.51.5.201 & 0 \\
+        172.51.5.204  & 255.255.255.252 & 192.168.15.2 & 3 \\
+        135.143.5.0   & 255.255.255.252 & 192.168.15.2 & 2 \\
+        135.143.5.4   & 255.255.255.252 & 192.168.15.2 & 2 \\ 	
+	10.27.15.192  & 255.255.255.248 & 192.168.15.2 & 1 \\
+	10.69.6.128   & 255.255.255.224 & 192.168.15.2 & 5 \\
+        10.69.6.160   & 255.255.255.224 & 192.168.15.2 & 5 \\
+	10.39.25.64   & 255.255.255.224 & 192.168.15.2 & 4 \\       
+	10.69.6.224   & 255.255.255.224 & 192.168.15.2 & 3 \\
+	10.69.6.192   & 255.255.255.224 & 192.168.15.2 & 1 \\	
+	10.39.25.0    & 255.255.255.192 & 192.168.15.2 & 2 \\
+	10.39.25.128  & 255.255.255.128 & 192.168.15.2 & 2 \\
+	10.42.5.0     & 255.255.255.0 & 192.168.15.2 & 1 \\
+        10.69.5.0     & 255.255.255.0 & 192.168.15.2 & 5 \\
+        192.168.15.0  & 255.255.255.0 & 192.168.15.1 & 0 \\  
+    \hline
+    \end{tabular} \\
+  \end{center}
+  \caption{Tabla de ruteo H131.}
+\end{table}
+\FloatBarrier
+
+
+\subsection{H132}
+\begin{table}
+  \begin{center}
+    \begin{tabular}{|l|l|l|l|}
+      \hline
+        \bf{Direcci\'on} & \bf{M\'ascara} & \bf{Gateway} & \bf{M\'etrica} \\
+      \hline 
+	10.27.15.200  & 255.255.255.252 & 10.27.15.205 & 2 \\
+        10.27.15.204  & 255.255.255.252 & 10.27.15.206 & 0 \\
+        172.51.5.192  & 255.255.255.252 & 10.27.15.205 & 4 \\
+        172.51.5.196  & 255.255.255.252 & 10.27.15.205 & 3 \\
+        172.51.5.200  & 255.255.255.252 & 192.168.15.1 & 1 \\
+        172.51.5.204  & 255.255.255.252 & 10.27.15.205 & 2 \\
+        135.143.5.0   & 255.255.255.252 & 10.27.15.205 & 1 \\
+        135.143.5.4   & 255.255.255.252 & 10.42.5.1 & 1 \\ 	
+	10.27.15.192  & 255.255.255.248 & 10.27.15.193 & 0 \\
+	10.69.6.128   & 255.255.255.224 & 10.27.15.205 & 4 \\
+        10.69.6.160   & 255.255.255.224 & 10.27.15.205 & 4 \\
+	10.39.25.64   & 255.255.255.224 & 10.27.15.205 & 3 \\       
+	10.69.6.224   & 255.255.255.224 & 10.27.15.205 & 2 \\
+	10.69.6.192   & 255.255.255.224 & 10.69.6.193 & 0 \\	
+	10.39.25.0    & 255.255.255.192 & 10.27.15.205 & 1 \\
+	10.39.25.128  & 255.255.255.128 & 10.27.15.205 & 1 \\
+	10.42.5.0     & 255.255.255.0 & 10.42.5.2 & 0 \\
+        10.69.5.0     & 255.255.255.0 & 10.27.15.205 & 4 \\
+        192.168.15.0  & 255.255.255.0 & 192.168.15.2 & 0 \\  
+    \hline
+    \end{tabular} \\
+  \end{center}
+  \caption{Tabla de ruteo H132.}
+\end{table}
+\FloatBarrier
+
+
+
 
 \subsection{Rutas alternativas}
 
