Nos hicimos todo dns de nuevo... lo subimos en una carpeta aparte, son 5.10am, asi que no llegamos a probarlo ahora... maniana lo probamos en la facu

--- a/Informe/informe.tex
+++ b/Informe/informe.tex
@@ -713,7 +713,7 @@ Para levantar un DNS en una m\'aquina, hay que correr el script ./install-dns.sh
 	resto-dns: si se quiere levantar el DNS para las sedes Humahuaca y La Quiaca
 
 \section{Simulación en la sala}
-Para la simulaci\'on en la sala, se prepararon una serie de scripts cuya con el objetivo de automatizar y acelerar el proceso de configuraci\'on de los routers y hosts necesarios, y evitar errores humanos.
+Para la simulaci\'on en la sala, se prepararon una serie de scripts con el objetivo de automatizar y acelerar el proceso de configuraci\'on de los routers y hosts necesarios, y evitar errores humanos.
 Se transcribe a continuaci\'on una breve reseña cuya finalidad es explicar someramente la funcionalidad de cada uno de los scripts:
 
 permisos.sh:
